--- a/app/src/main/res/layout/dialog_new_course.xml
+++ b/app/src/main/res/layout/dialog_new_course.xml
@@ -33,7 +33,7 @@
                 android:id="@+id/edtID"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="ID:" />
+                android:hint="@string/id" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
