--- a/app/src/main/res/layout/dialog_new_course.xml
+++ b/app/src/main/res/layout/dialog_new_course.xml
@@ -44,7 +44,7 @@
                 android:id="@+id/edtName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Name:" />
+                android:hint="@string/nameNewCourse" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
@@ -55,7 +55,7 @@
                 android:id="@+id/edtCode"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Course Code:" />
+                android:hint="@string/course_codeNewCourse" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
@@ -66,7 +66,7 @@
                 android:id="@+id/edtStart"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Start at:" />
+                android:hint="@string/start_atNewCourse" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
@@ -77,7 +77,7 @@
                 android:id="@+id/edtEnd"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="End at:" />
+                android:hint="@string/end_atNewCourse" />
         </android.support.design.widget.TextInputLayout>
 
     </LinearLayout>
